(untested) refactors to various server aspects to better align w project (#29)
* untested additions

* revert

--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -4,6 +4,7 @@
   "license": "Apache-2.0",
   "description": "Q&A server for the MongoDB Docs AI chatbot.",
   "author": "MongoDB, Inc.",
+  "type": "module",
   "keywords": [],
   "engines": {
     "node": ">=18",
@@ -27,17 +28,22 @@
   },
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.7",
+    "@types/json-schema": "^7.0.14",
     "chat-core": "file:../chat-core",
     "common-tags": "^1.8.2",
     "cors": "^2.8.5",
+    "digest-fetch": "^2.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
     "gpt3-tokenizer": "^1.1.5",
+    "i": "^0.3.7",
     "ip-address": "^8.1.0",
     "langchain": "^0.0.148",
     "lodash.clonedeep": "^4.5.0",
     "mongodb": "^5.7.0",
+    "node-fetch": "^2.7.0",
+    "npm": "^10.2.1",
     "openai": "^3.2.1",
     "pm2": "^5.3.0",
     "rate-limit-mongo": "^2.3.2",
@@ -73,6 +79,7 @@
     "mongodb-memory-server": "^8.12.2",
     "node-mocks-http": "^1.12.2",
     "nodemon": "^3.0.1",
+    "openapi-types": "^12.1.3",
     "prettier": "^2.8.7",
     "release-it": "^16.1.5",
     "supertest": "^6.3.3",
