Integration test openai api chat llm + bug fixes (#43)
* test fetching and adding real endpoint

* add tests w digest auth

--- a/chat-server/.env.example
+++ b/chat-server/.env.example
@@ -11,3 +11,5 @@ MONGODB_DATABASE_NAME=<docs-chatbot-ENV>
 VECTOR_SEARCH_INDEX_NAME=<index_name>
 NODE_ENV=development
 ALLOWED_ORIGINS=http://example.com,http://localhost:5173
+ATLAS_TEST_PUBLIC_API_KEY=<public_key>
+ATLAS_TEST_PRIVATE_API_KEY=<private_key>
