--- a/mongodb-atlas/package.json
+++ b/mongodb-atlas/package.json
@@ -2,7 +2,8 @@
   "name": "mongodb-atlas",
   "version": "1.0.0",
   "license": "Apache-2.0",
-  "description": "",
+  "description": "Utilities for managing MongoDB Atlas deployments used by the projects in this repo.",
+  "private": true,
   "scripts": {
     "add-search-index:dev": "ts-node add-search-index.ts .env.dev",
     "add-search-index:test": "ts-node add-search-index.ts .env.test",
