--- a/chat-core/package.json
+++ b/chat-core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chat-core",
+  "name": "mongodb-rag-core",
   "version": "0.0.1",
   "description": "Common elements used by the chatbot components.",
   "author": "MongoDB, Inc.",
