--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.5",
-    "chat-core": "file:../chat-core",
+    "mongodb-rag-core": "^0.0.1",
     "common-tags": "^1.8.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
