--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -90,7 +90,7 @@
     "@lg-chat/message-rating": "^1.1.3",
     "@microsoft/fetch-event-source": "^2.0.1",
     "buffer": "^6.0.3",
-    "chat-core": "file:../chat-core",
+    "mongodb-rag-core": "^0.0.1",
     "esbuild": "^0.17.19",
     "prettier": "^2.8.8",
     "react-markdown": "^8.0.7",
