--- a/package.json
+++ b/package.json
@@ -7,19 +7,23 @@
     "chat-server",
     "chat-ui",
     "ingest",
-    "scripts",
-    "performance-tests"
+    "ingest-mongodb-public",
+    "mongodb-atlas",
+    "performance-tests",
+    "scripts"
   ],
   "scripts": {
     "bootstrap": "lerna bootstrap",
-    "dev": "lerna run dev --scope='{chat-server,mongodb-chatbot-ui}' --stream --parallel",
-    "dev:server": "lerna run dev --scope='chat-server' --stream",
+    "dev": "lerna run dev --scope='{mongodb-chatbot-server,mongodb-chatbot-ui}' --stream --parallel",
+    "dev:server": "lerna run dev --scope='mongodb-chatbot-server' --stream",
     "dev:ui": "lerna run dev --scope='mongodb-chatbot-ui' --stream",
     "clean": "lerna clean",
     "build": "lerna run build",
     "test": "lerna run test",
     "lint": "lerna run lint",
-    "release:chat-ui": "lerna run release --scope mongodb-chatbot-ui && git add ./package-lock.json && git commit --amend --no-edit"
+    "release:chat-ui": "lerna run release --scope mongodb-chatbot-ui && git add ./package-lock.json && git commit --amend --no-edit",
+    "version": "lerna version --no-private",
+    "publish:new": "lerna publish from-package"
   },
   "devDependencies": {
     "lerna": "^5.6.2"
