--- a/scripts/package.json
+++ b/scripts/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.2",
   "description": "",
   "main": "index.js",
+  "private": true,
   "scripts": {
     "createQualityTestsYaml-aug-2023": "npm run build && node ./build/createAug2023QualityTestsYaml.js",
     "createQualityTestsYaml-sept-2023": "npm run build && node ./build/createSept2023QualityTestsYaml.js",
@@ -22,8 +23,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chat-core": "file:../chat-core",
-    "mongodb-chatbot-server": "file:../chat-server",
+    "mongodb-rag-core": "^0.0.1",
+    "mongodb-chatbot-server": "^0.1.0",
     "csv": "^6.3.1",
     "dotenv": "^16.3.1",
     "mongodb": "^5.7.0",
