update release conf

--- a/chat-server/.release-it.json
+++ b/chat-server/.release-it.json
@@ -22,5 +22,13 @@
       "npm run lint",
       "npm run test"
     ]
+  },
+  "plugins": {
+    "@release-it/bumper": {
+      "out": {
+        "file": "package.json",
+        "path": ["dependencies.mongodb-rag-core"]
+      }
+    }
   }
 }
