--- a/scripts/.release-it.json
+++ b/scripts/.release-it.json
@@ -21,5 +21,13 @@
       "pushd ../chat-server && npm i && npm run build && popd",
       "npm run build"
     ]
+  },
+  "plugins": {
+    "@release-it/bumper": {
+      "out": {
+        "file": "package.json",
+        "path": ["dependencies.mongodb-chatbot-server"]
+      }
+    }
   }
 }
