--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -26,7 +26,6 @@
   },
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.5",
-    "mongodb-rag-core": "^0.0.1",
     "common-tags": "^1.8.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -37,6 +36,7 @@
     "langchain": "^0.0.148",
     "lodash.clonedeep": "^4.5.0",
     "mongodb": "^5.7.0",
+    "mongodb-rag-core": "^0.0.1",
     "openai": "^3.2.1",
     "pm2": "^5.3.0",
     "rate-limit-mongo": "^2.3.2",
@@ -52,6 +52,7 @@
     "@babel/core": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@release-it/bumper": "^5.1.0",
     "@types/common-tags": "^1.8.1",
     "@types/connect-timeout": "^0.0.37",
     "@types/cors": "^2.8.13",
