--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -89,9 +89,10 @@
     "@lg-chat/message-prompts": "^1.0.2",
     "@lg-chat/message-rating": "^1.1.3",
     "@microsoft/fetch-event-source": "^2.0.1",
+    "@release-it/bumper": "^5.1.0",
     "buffer": "^6.0.3",
-    "mongodb-rag-core": "^0.0.1",
     "esbuild": "^0.17.19",
+    "mongodb-rag-core": "^0.0.1",
     "prettier": "^2.8.8",
     "react-markdown": "^8.0.7",
     "react-transition-group": "^4.4.5",
