--- a/ingest-mongodb-public/package.json
+++ b/ingest-mongodb-public/package.json
@@ -34,8 +34,9 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "mongodb-rag-core": "^0.0.1",
+    "@release-it/bumper": "^5.1.0",
     "dotenv": "^16",
+    "mongodb-rag-core": "^0.0.1",
     "mongodb-rag-ingest": "^0.1.2"
   }
 }
