--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "lint": "lerna run lint",
     "release:chat-ui": "lerna run release --scope mongodb-chatbot-ui && git add ./package-lock.json && git commit --amend --no-edit",
     "version": "lerna version --no-private",
-    "publish:new": "lerna publish from-package"
+    "release": "npm run release --workspaces && release-it"
   },
   "devDependencies": {
-    "lerna": "^5.6.2"
+    "lerna": "^5.6.2",
+    "release-it": "^16.2.1"
   }
 }
