--- a/chat-core/package.json
+++ b/chat-core/package.json
@@ -15,7 +15,8 @@
     "build": "tsc -b",
     "watch": "tsc -b -w",
     "test": "jest",
-    "docs": "npx typedoc --excludePrivate --exclude '**/*.test.ts' --out docs src"
+    "docs": "npx typedoc --excludePrivate --exclude '**/*.test.ts' --out docs src",
+    "release": "release-it"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7",
@@ -34,6 +35,7 @@
     "jest": "^29",
     "mongodb-memory-server": "^8",
     "prettier": "^2",
+    "release-it": "^16.2.1",
     "ts-jest": "^29",
     "ts-node": "^10",
     "typedoc": "^0",
