--- a/chat-core/package.json
+++ b/chat-core/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7",
     "@babel/types": "^7",
+    "@release-it/keep-a-changelog": "^4.0.0",
     "@types/common-tags": "^1",
     "@types/express": "^4.17.17",
     "@types/jest": "^26",
