--- a/chat-core/.release-it.json
+++ b/chat-core/.release-it.json
@@ -21,7 +21,7 @@
   },
   "plugins": {
     "@release-it/keep-a-changelog": {
-      "filename": "CHANGELOG.md"
+      "filename": "chat-core/CHANGELOG.md"
     }
   }
 }
