--- a/chat-core/.release-it.json
+++ b/chat-core/.release-it.json
@@ -2,6 +2,7 @@
   "git": {
     "commitArgs": ["-a"],
     "commitMessage": "Release mongodb-rag-core v${version}\n\n${changelog}",
+    "changelog": "git log --pretty=format:\"* %s (%h)\" ${from}...${to} -- .",
     "tag": true,
     "push": true,
     "pushRepo": "upstream",
@@ -14,7 +15,7 @@
     "releaseName": "mongodb-rag-core-v${version}",
     "draft": true,
     "release": true,
-    "releaseNotes": "git log -- chat-core"
+    "releaseNotes": "git log -- ."
   },
   "hooks": {
     "before:init": ["npm run build"]
