--- a/lerna.json
+++ b/lerna.json
@@ -8,6 +8,7 @@
     "chat-server",
     "chat-ui",
     "ingest",
+    "chatbot-server-mongodb-public",
     "ingest-mongodb-public",
     "mongodb-atlas",
     "performance-tests",
