--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "chat-server",
     "chat-ui",
     "ingest",
+    "chatbot-server-mongodb-public",
     "ingest-mongodb-public",
     "mongodb-atlas",
     "performance-tests",
