--- a/package.json
+++ b/package.json
@@ -23,11 +23,9 @@
     "test": "lerna run test",
     "lint": "lerna run lint",
     "release:chat-ui": "lerna run release --scope mongodb-chatbot-ui && git add ./package-lock.json && git commit --amend --no-edit",
-    "version": "lerna version --no-private",
-    "release": "npm run release --workspaces && release-it"
+    "version": "lerna version --no-private"
   },
   "devDependencies": {
-    "lerna": "^5.6.2",
-    "release-it": "^16.2.1"
+    "lerna": "^5.6.2"
   }
 }
