update package files to use

--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -47,7 +47,7 @@
     "test": "vitest"
   },
   "bundleDependencies": [
-    "chat-core",
+    "mongodb-rag-core",
     "@lg-chat/avatar",
     "@lg-chat/chat-window",
     "@lg-chat/chat-disclaimer",
