remove chat-server tests from prod build

--- a/chat-server/jest.config.json
+++ b/chat-server/jest.config.json
@@ -1,7 +1,7 @@
 {
   "preset": "ts-jest",
-  "setupFiles": ["<rootDir>/src/jestEnvSetUp.ts"],
-  "setupFilesAfterEnv": ["<rootDir>/src/jestSetUp.ts"],
+  "setupFiles": ["<rootDir>/src/test/jestEnvSetUp.ts"],
+  "setupFilesAfterEnv": ["<rootDir>/src/test/jestSetUp.ts"],
   "testPathIgnorePatterns": [
     "<rootDir>/dist",
     "<rootDir>/src/llmQualitativeTests"
