--- a/chat-server/jest.config.json
+++ b/chat-server/jest.config.json
@@ -2,8 +2,5 @@
   "preset": "ts-jest",
   "setupFiles": ["<rootDir>/src/test/jestEnvSetUp.ts"],
   "setupFilesAfterEnv": ["<rootDir>/src/test/jestSetUp.ts"],
-  "testPathIgnorePatterns": [
-    "<rootDir>/dist",
-    "<rootDir>/src/llmQualitativeTests"
-  ]
+  "testPathIgnorePatterns": ["<rootDir>/dist"]
 }
