--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -44,7 +44,8 @@
     "build-storybook": "storybook build",
     "release:interactive": "release-it",
     "release": "release-it --ci",
-    "test": "vitest"
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "bundleDependencies": [
     "mongodb-rag-core",
